<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/tlo"
    tools:context="com.example.katarzynaa.p2.MainActivity">

    <Button
        android:id="@+id/btnChoroby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickbtnChoroby"
        android:text="@string/btnChoroby"
        android:background="#D2B48C"
        app:layout_constraintBottom_toTopOf="@+id/btnDieta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDieta"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="189dp"
        android:background="#D2B48C"
        android:onClick="onClickDieta"
        android:text="@string/btnDieta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlyny"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="8dp"
        android:background="#D2B48C"
        android:onClick="onClickPlyny"
        android:text="@string/btnPlyny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDieta"
        app:layout_constraintVertical_bias="0.771" />
</android.support.constraint.ConstraintLayout>
